--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,12 @@
           "json": "always"
         }
       ],
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "_"
+        }
+      ],
       "import/no-extraneous-dependencies": "off"
     },
     "settings": {
