--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.10",
     "@babel/core": "^7.13.13",
+    "@babel/node": "^7.13.13",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/supertest": "^2.0.10",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
@@ -22,13 +30,17 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "2.22.1",
     "jest": "^26.6.3",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "start": "tsc ./src/index",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./src/index.ts",
+    "prebuild": "cross-env-shell rm -rf build",
+    "build": "babel src --extensions \".ts\" --out-dir build --copy-files --ignore \"**/*.spec.ts\" --no-copy-ignored",
+    "start": "cross-env NODE_ENV=production node ./build/index",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./src/index.ts",
+    "pretest": "jest --clearCache",
     "test": "jest"
   }
 }
