--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
+    "start": "cross-env NODE_ENV=production node ./build/index",
     "prebuild": "cross-env-shell rm -rf build",
     "build": "babel src --extensions \".ts\" --out-dir build --copy-files --ignore \"**/*.spec.ts\" --no-copy-ignored",
-    "start": "cross-env NODE_ENV=production node ./build/index",
-    "dev": "cross-env NODE_ENV=development ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./src/index.ts",
     "pretest": "cross-env-shell rm -rf coverage && jest --clearCache",
     "test": "jest",
-    "lint": "eslint \"**/*.ts\" --ignore-pattern node_modules/"
+    "lint": "eslint \"**/*.ts\" --ignore-pattern node_modules/",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./src/index.ts"
   }
 }
